--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -3,7 +3,7 @@
     <h1>{{ .Title }}</h1>
     {{ .Content }}
 
-   <form name="contact" method="POST" data-netlify="true" action="/thank-you/">
+  <form name="contact" method="POST" netlify action="/thank-you/">
       <p class="hidden">
         <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
       </p>
