--- a/layouts/partials/widgets/social.html
+++ b/layouts/partials/widgets/social.html
@@ -1,90 +1,70 @@
-{{- if .Site.Params.widgets.social }}
-<div class="widget-social widget">
-	<h4 class="widget-social__title widget__title">{{ T "social_title" }}</h4>
-	<div class="widget-social__content widget__content">
-		{{- with .Site.Params.widgets.social.facebook }}
-		<div class="widget-social__item widget__item">
-			<a class="widget-social__link widget__link btn" title="Facebook" rel="noopener noreferrer" href="https://facebook.com/{{ . }}" target="_blank">
-				{{ partial "svg/facebook.svg" (dict "class" "widget-social__link-icon") }}
-				<span>Facebook</span>
-			</a>
-		</div>
-		{{- end }}
-		{{- with .Site.Params.widgets.social.twitter }}
-		<div class="widget-social__item widget__item">
-			<a class="widget-social__link widget__link btn" title="Twitter" rel="noopener noreferrer" href="https://twitter.com/{{ . }}" target="_blank">
-				{{ partial "svg/twitter.svg" (dict "class" "widget-social__link-icon") }}
-				<span>Twitter</span>
-			</a>
-		</div>
-		{{- end }}
-		{{- with .Site.Params.widgets.social.instagram }}
-		<div class="widget-social__item widget__item">
-			<a class="widget-social__link widget__link btn" title="Instagram" rel="noopener noreferrer" href="https://www.instagram.com/{{ . }}" target="_blank">
-				{{ partial "svg/instagram.svg" (dict "class" "widget-social__link-icon") }}
-				<span>Instagram</span>
-			</a>
-		</div>
-		{{- end }}
-		{{- with .Site.Params.widgets.social.linkedin }}
-		<div class="widget-social__item widget__item">
-			<a class="widget-social__link widget__link btn" title="LinkedIn" rel="noopener noreferrer" href="https://linkedin.com/in/{{ . }}" target="_blank">
-				{{ partial "svg/linkedin.svg" (dict "class" "widget-social__link-icon") }}
-				<span>LinkedIn</span>
-			</a>
-		</div>
-		{{- end }}
-		{{- with .Site.Params.widgets.social.telegram }}
-		<div class="widget-social__item widget__item">
-			<a class="widget-social__link widget__link btn" title="Telegram" rel="noopener noreferrer" href="https://t.me/{{ . }}" target="_blank">
-				{{ partial "svg/telegram.svg" (dict "class" "widget-social__link-icon") }}
-				<span>Telegram</span>
-			</a>
-		</div>
-		{{- end }}
-		{{- with .Site.Params.widgets.social.github }}
-		<div class="widget-social__item widget__item">
-			<a class="widget-social__link widget__link btn" title="GitHub" rel="noopener noreferrer" href="https://github.com/{{ . }}" target="_blank">
-				{{ partial "svg/github.svg" (dict "class" "widget-social__link-icon") }}
-				<span>GitHub</span>
-			</a>
-		</div>
-		{{- end }}
-		{{- with .Site.Params.widgets.social.gitlab }}
-		<div class="widget-social__item widget__item">
-			<a class="widget-social__link widget__link btn" title="GitLab" rel="noopener noreferrer" href="https://gitlab.com/{{ . }}" target="_blank">
-				{{ partial "svg/gitlab.svg" (dict "class" "widget-social__link-icon") }}
-				<span>GitLab</span>
-			</a>
-		</div>
-		{{- end }}
-		{{- with .Site.Params.widgets.social.bitbucket }}
-		<div class="widget-social__item widget__item">
-			<a class="widget-social__link widget__link btn" title="Bitbucket" rel="noopener noreferrer" href="https://bitbucket.org/{{ . }}" target="_blank">
-				{{ partial "svg/bitbucket.svg" (dict "class" "widget-social__link-icon") }}
-				<span>Bitbucket</span>
-			</a>
-		</div>
-		{{- end }}
-		{{- with .Site.Params.widgets.social.email }}
-		<div class="widget-social__item widget__item">
-			<a class="widget-social__link widget__link btn" title="Email" href="mailto:{{ . }}">
-				{{ partial "svg/email.svg" (dict "class" "widget-social__link-icon") }}
-				<span>{{ . }}</span>
-			</a>
-		</div>
-		{{- end }}
+<ul class="social-links">
 
-		{{ range .Site.Params.widgets.social.custom }}
-		<div class="widget-social__item widget__item">
-			<a class="widget-social__link widget__link btn" title="{{ .title }}" {{ with .rel | default "noopener noreferrer" }} rel="{{ . }}"{{ end }} href="{{ .url }}" target="_blank">
-				{{- if .icon }}
-					{{ partial .icon (dict "class" "widget-social__link-icon") }}
-				{{- end }}
-				<span>{{ .title }}</span>
-			</a>
-		</div>
-		{{ end }}
-	</div>
-</div>
-{{- end }}
+  {{ if .Site.Params.social.rss }}
+  <li>
+    <a href="{{ .Site.BaseURL }}index.xml" title="RSS">
+      <span class="fa-stack fa-lg">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fas fa-rss fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {{ end }}
+
+  {{ if .Site.Params.social.email }}
+  <li>
+    <a href="mailto:{{ .Site.Params.social.email }}" title="Email">
+      <span class="fa-stack fa-lg">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {{ end }}
+
+  {{ if .Site.Params.social.phone }}
+  <li>
+    <a href="{{ .Site.Params.social.phone }}" title="Phone">
+      <span class="fa-stack fa-lg">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fas fa-phone fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {{ end }}
+
+  {{ if .Site.Params.social.whatsapp }}
+  <li>
+    <a href="{{ .Site.Params.social.whatsapp }}" title="WhatsApp" target="_blank" rel="noopener noreferrer">
+      <span class="fa-stack fa-lg">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fab fa-whatsapp fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {{ end }}
+
+  {{ if .Site.Params.social.linkedin }}
+  <li>
+    <a href="{{ .Site.Params.social.linkedin }}" title="LinkedIn" target="_blank" rel="noopener noreferrer">
+      <span class="fa-stack fa-lg">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {{ end }}
+
+  {{ if .Site.Params.social.github }}
+  <li>
+    <a href="{{ .Site.Params.social.github }}" title="GitHub" target="_blank" rel="noopener noreferrer">
+      <span class="fa-stack fa-lg">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {{ end }}
+
+</ul>
+
