--- a/layouts/partials/widgets/social.html
+++ b/layouts/partials/widgets/social.html
@@ -1,8 +1,7 @@
 <ul class="social-links">
-
-  {{ if .Site.Params.social.rss }}
+  {{ with .Site.Params.social.rss }}
   <li>
-    <a href="{{ .Site.BaseURL }}index.xml" title="RSS">
+    <a href="{{ $.Site.BaseURL }}index.xml" title="RSS">
       <span class="fa-stack fa-lg">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fas fa-rss fa-stack-1x fa-inverse"></i>
@@ -11,9 +10,9 @@
   </li>
   {{ end }}
 
-  {{ if .Site.Params.social.email }}
+  {{ with .Site.Params.social.email }}
   <li>
-    <a href="mailto:{{ .Site.Params.social.email }}" title="Email">
+    <a href="mailto:{{ . }}" title="Email">
       <span class="fa-stack fa-lg">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
@@ -22,9 +21,9 @@
   </li>
   {{ end }}
 
-  {{ if .Site.Params.social.phone }}
+  {{ with .Site.Params.social.phone }}
   <li>
-    <a href="{{ .Site.Params.social.phone }}" title="Phone">
+    <a href="tel:{{ . }}" title="Phone">
       <span class="fa-stack fa-lg">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fas fa-phone fa-stack-1x fa-inverse"></i>
@@ -33,9 +32,9 @@
   </li>
   {{ end }}
 
-  {{ if .Site.Params.social.whatsapp }}
+  {{ with .Site.Params.social.whatsapp }}
   <li>
-    <a href="{{ .Site.Params.social.whatsapp }}" title="WhatsApp" target="_blank" rel="noopener noreferrer">
+    <a href="{{ . }}" title="WhatsApp" target="_blank" rel="noopener noreferrer">
       <span class="fa-stack fa-lg">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fab fa-whatsapp fa-stack-1x fa-inverse"></i>
@@ -44,9 +43,9 @@
   </li>
   {{ end }}
 
-  {{ if .Site.Params.social.linkedin }}
+  {{ with .Site.Params.social.linkedin }}
   <li>
-    <a href="{{ .Site.Params.social.linkedin }}" title="LinkedIn" target="_blank" rel="noopener noreferrer">
+    <a href="{{ . }}" title="LinkedIn" target="_blank" rel="noopener noreferrer">
       <span class="fa-stack fa-lg">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
@@ -55,9 +54,9 @@
   </li>
   {{ end }}
 
-  {{ if .Site.Params.social.github }}
+  {{ with .Site.Params.social.github }}
   <li>
-    <a href="{{ .Site.Params.social.github }}" title="GitHub" target="_blank" rel="noopener noreferrer">
+    <a href="{{ . }}" title="GitHub" target="_blank" rel="noopener noreferrer">
       <span class="fa-stack fa-lg">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -65,6 +64,4 @@
     </a>
   </li>
   {{ end }}
-
 </ul>
-
