--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,3 +8,5 @@
   <meta name="description" content="{{ .Description }}">
 {{ end }}
 <link rel="stylesheet" href="{{ "css/custom.css" | relURL }}">
+<link rel="stylesheet" href="{{ "css/all.min.css" | relURL }}">
+
