--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html class="no-js" lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>{{ block "title" . }}{{ if not .IsHome }}{{ .Title }} - {{ end }}{{ .Site.Title }}{{ end }}</title>
-  <script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
-  <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Params.Description }}{{ end }}">
+  <script>
+    (function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");
+  </script>
+  <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Params.Description }}{{ end }}" />
 
   {{- if .Site.Params.opengraph }}
     {{ template "_internal/opengraph.html" . }}
@@ -16,34 +18,34 @@
   {{- if .Site.Params.twitter_cards }}
     {{ template "_internal/twitter_cards.html" . }}
   {{- end }}
+
   {{ $contactFormCss := resources.Get "css/contact-form.css" | minify }}
-        <link rel="stylesheet" href="{{ $contactFormCss.RelPermalink }}">
+  <link rel="stylesheet" href="{{ $contactFormCss.RelPermalink }}" />
 
   {{- $googleFontsLink := .Site.Params.googleFontsLink | default "https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" }}
   {{- if hasPrefix $googleFontsLink "https://fonts.googleapis.com/" }}
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="dns-prefetch" href="//fonts.googleapis.com">
-  <link rel="dns-prefetch" href="//fonts.gstatic.com">
-  <link rel="stylesheet" {{ printf `href="%s"` $googleFontsLink | safeHTMLAttr }}>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
+    <link rel="stylesheet" href="{{ $googleFontsLink }}" />
   {{- end }}
 
   {{ $style := resources.Get "css/style.css" | resources.ExecuteAsTemplate "css/style.css" . -}}
-  <link rel="stylesheet" href="{{ $style.RelPermalink }}">
-  {{ range .Site.Params.customCSS -}}
+  <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
 
-<!-- DEBUG: customCSS param is working -->
-{{ range .Site.Params.customCSS }}
-  <link rel="stylesheet" href="{{ . | relURL }}">
-  <!-- DEBUG: loading {{ . }} -->
-{{ end }}
-  
-  <link rel="stylesheet" href="{{ . | relURL }}">
-  {{- end }}
-<link rel="stylesheet" href="{{ "css/all.min.css" | relURL }}">   {{- with .OutputFormats.Get "rss" }}
-  {{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .RelPermalink $.Site.Title | safeHTML }}
+  {{/* טעינת קבצי CSS מותאמים אישית מהפרמטר customCSS */}}
+  {{ range .Site.Params.customCSS }}
+    <link rel="stylesheet" href="{{ . | relURL }}" />
+  {{ end }}
+
+  <link rel="stylesheet" href="{{ "css/all.min.css" | relURL }}" />
+
+  {{- with .OutputFormats.Get "rss" }}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .RelPermalink $.Site.Title | safeHTML }}
   {{- end }}
 
-  <link rel="shortcut icon" href="{{ "favicon.ico" | relURL }}">
+  <link rel="shortcut icon" href="{{ "favicon.ico" | relURL }}" />
+
   {{- $server := "" }}
   {{- if gt (int (index (split hugo.Version ".") 1)) "120" }}
     {{ $server = hugo.IsServer }}
@@ -59,22 +61,23 @@
     {{ block "header" . }}{{ partial "header.html" . }}{{ end }}
     <div class="wrapper flex">
       <div class="primary">
-      {{ block "main" . }}
-        {{ with .Content }}
-        <div class="content main__content clearfix">
-          {{ . }}
-        </div>
+        {{ block "main" . }}
+          {{ with .Content }}
+            <div class="content main__content clearfix">
+              {{ . }}
+            </div>
+          {{ end }}
         {{ end }}
-      {{ end }}
       </div>
       {{ block "sidebar" . }}{{ partial "sidebar.html" . }}{{ end }}
     </div>
     {{ block "footer" . }}{{ partial "footer.html" . }}{{ end }}
   </div>
-<script async defer src="{{ "js/menu.js" | relURL }}"></script>
-{{ range .Site.Params.customJS -}}
-<script src="{{ . | relURL }}"></script>
-{{- end }}
-{{- partial "mathjax.html" . -}}
+
+  <script async defer src="{{ "js/menu.js" | relURL }}"></script>
+  {{ range .Site.Params.customJS }}
+    <script src="{{ . | relURL }}"></script>
+  {{ end }}
+  {{ partial "mathjax.html" . }}
 </body>
 </html>
