--- a/layouts/partials/authorbox.html
+++ b/layouts/partials/authorbox.html
@@ -1,31 +1,33 @@
-{{- if .Param "authorbox" }}
-{{- with .Site.Params.author }}
-<div class="authorbox clearfix">
+{{- if .Site.Params.authorbox }}
+  {{- with .Site.Params.author }}
+    {{- if or .avatar .name .bio }}
+      <div class="authorbox clearfix">
+        
+        {{- with .avatar }}
+          <figure class="authorbox__avatar">
+            <img alt="{{ $.Site.Params.author.name }} avatar" src="{{ . | relURL }}" class="avatar" height="90" width="90">
+          </figure>
+        {{- end }}
+        
+        <div class="authorbox__content">
+          {{- with .name }}
+            <div class="authorbox__header">
+              <span class="authorbox__name">{{ T "authorbox_name" (dict "Name" .) }}</span>
+            </div>
+          {{- end }}
+          
+          {{- with .bio }}
+            <div class="authorbox__description">
+              {{ . | markdownify }}
+            </div>
+          {{- end }}
+        </div>
 
-    {{- if and (not .avatar) (not .name) (not .bio) }}
-    <p class="authorbox__warning">
+      </div>
+    {{- else }}
+      <p class="authorbox__warning">
         <strong>WARNING:</strong> Authorbox is activated, but author parameters are not specified.
-    </p>
+      </p>
     {{- end }}
-
-    {{- with .avatar }}
-    <figure class="authorbox__avatar">
-        <img alt="{{ $.Site.Params.author.name }} avatar" src="{{ . | relURL }}" class="avatar" height="90" width="90">
-    </figure>
-    {{- end }}
-
-    {{- with .name }}
-    <div class="authorbox__header">
-        <span class="authorbox__name">{{ T "authorbox_name" (dict "Name" .) }}</span>
-    </div>
-    {{- end }}
-
-    {{- with .bio }}
-    <div class="authorbox__description">
-        {{ . | markdownify }}
-    </div>
-    {{- end }}
-
-</div>
-{{- end }}
+  {{- end }}
 {{- end }}
