--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -68,3 +68,36 @@
   background-color: #aaa; /* אפור כהה יותר בהובר */
   color: white;
 }
+.authorbox--centered {
+  text-align: center;
+  color: #bfbfbf;
+  font-size: 15px;
+}
+
+.authorbox--centered .authorbox__name {
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.authorbox--centered .authorbox__avatar {
+  margin: 0 auto 10px;
+  display: inline-block;
+}
+
+.authorbox--centered .authorbox__avatar img {
+  border-radius: 50%; /* אופציונלי, תמונה עגולה */
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+
+.authorbox--centered .authorbox__avatar a:hover img {
+  opacity: 0.8; /* אפקט ריחוף */
+}
+
+.authorbox--centered .authorbox__description {
+  max-width: 300px; /* ניתן לשנות לפי הצורך */
+  margin: 0 auto;
+}
+
