--- a/layouts/partials/widgets/social.html
+++ b/layouts/partials/widgets/social.html
@@ -1,5 +1,5 @@
 <div class="social-links-widget widget">
-    <h4 class="widget-title">עקבו אחרינו</h4>
+    <h4 class="widget-title"></h4>
 
     <ul class="social-icons-circular"> {{ with .Site.Params.myEmail }}
         <li>
