--- a/layouts/partials/widgets/custom_authorbox.html
+++ b/layouts/partials/widgets/custom_authorbox.html
@@ -7,8 +7,8 @@
 
       {{- with .avatar }}
         <div class="custom-authorbox__avatar">
-          <a href="/about">
-            <img src="{{ . | relURL }}" alt="{{ $.Site.Params.author.name }} avatar" height="170" width="150">
+          <a href="/pages/about">
+            <img src="{{ . | relURL }}" alt="{{ $.Site.Params.author.name }} avatar" height="270" width="250">
           </a>
         </div>
       {{- end }}
