--- a/assets/css/contact-form.css
+++ b/assets/css/contact-form.css
@@ -1,8 +1,8 @@
 /* assets/css/contact-form.css */
 
 form[name="contact"] {
-  max-width: 600px;
-  margin: 0px auto;
+  max-width: 700px;
+  margin: 0px
   padding: 25px;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
