--- a/assets/css/contact-form.css
+++ b/assets/css/contact-form.css
@@ -2,7 +2,7 @@
 
 form[name="contact"] {
   max-width: 700px;
-  margin: 0px
+  margin: 0px 5px;
   padding: 25px;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
