--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,10 +133,10 @@ textarea {
 /* Button */
 .btn {
 display: inline-block;
-    border: 1px solid rgba(255, 255, 255, .8);
+    border: 1px solid  #bfbfbf;
     border-radius: 999em;
     padding: 0 10px;
-    color: #fff;
+    color: #bfbfbf;
     line-height: 24px;
     font-size: 14px;
     text-decoration: none;
