--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,13 @@
 <header class="header">
-	<div class="container header__container">
-		{{ partial "custom-logo.html" . }}
-		{{ partial "menu.html" . }}
-	</div>
+  <div class="container header__container">
+    {{ partial "custom-logo.html" . }}
+    {{ partial "menu.html" . }}
+
+    {{ if .IsHome }}
+      <div class="hero-image">
+        <img src="/img/hero.jpg" alt="Hero Image">
+      </div>
+    {{ end }}
+
+  </div>
 </header>
