--- a/public/css/style.css
+++ b/public/css/style.css
@@ -524,7 +524,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 	display: block;
 	padding: 10px 15px;
 	padding: .625rem .9375rem;
-	font-weight: 700;
+	font-weight: 500;
 	color: #fff;
 	text-transform: uppercase;
 }
@@ -754,7 +754,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 	margin: 0 6px 6px 0;
 	margin: 0 .375rem .375rem 0;
 	text-transform: uppercase;
-	background: #2a2a2a;
+	background: 
 }
 
 .tags__item:hover {
