--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -20,7 +20,7 @@
           {{- $tagPermalink := $tag.Permalink -}}
 
           {{- /* בניית ביטוי רגולרי לחיפוש התגית בתוכן הפוסט. */ -}}
-          {{- $regex := printf "(?i)\\b%s\\b" (urlquery $tagName) -}}
+          {{- $regex := printf "(?i)\\b%s\\b" ($tagName | urlquery) -}} {# <--- שימו לב לתיקון כאן #}
 
           {{- /* בניית מחרוזת הקישור בפורמט HTML */ -}}
           {{- $link := printf "<a href=\"%s\">%s</a>" $tagPermalink $tagName -}}
