--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 <main class="main" role="main">
+
+
   <article class="post">
     <header class="post__header">
       <h1 class="post__title">{{ .Title }}</h1>
@@ -13,23 +15,7 @@
     {{ partial "post_thumbnail.html" (dict "class" "post" "page" .) }}
     {{- partial "post_toc.html" . -}}
     <div class="content post__content clearfix">
-      {{- $content := .Content -}}
-
-      {{- range $tag := .Site.Taxonomies.tags -}}
-          {{- $tagName := $tag.LinkTitle -}}
-          {{- $tagPermalink := $tag.Permalink -}}
-
-          {{- /* בניית ביטוי רגולרי לחיפוש התגית בתוכן הפוסט. */ -}}
-          {{- $regex := printf "(?i)\\b%s\\b" ($tagName | urlquery) -}} {# <--- שימו לב לתיקון כאן #}
-
-          {{- /* בניית מחרוזת הקישור בפורמט HTML */ -}}
-          {{- $link := printf "<a href=\"%s\">%s</a>" $tagPermalink $tagName -}}
-
-          {{- /* ביצוע ההחלפה */ -}}
-          {{- $content = replaceRE $regex $link $content -}}
-      {{- end -}}
-
-      {{- $content | safeHTML -}}
+      {{ .Content }}
     </div>
     {{- if .Params.tags }}
     <footer class="post__footer">
@@ -37,6 +23,7 @@
     </footer>
     {{- end }}
   </article>
+
 </main>
 
 {{ partial "pager.html" . }}
