--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,7 +2,7 @@
 <main class="main list" role="main">
 	{{- with .Title }}
 	<header class="main__header">
-		<h1 class="main__title">{{ . }}</h1>
+		<h1>{{ i18n "nav_blog" }}</h1>
 	</header>
 	{{- end }}
 	{{- with .Content }}
