--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,6 +1,9 @@
 {{ define "main" }}
-  {{ .Content }}
-  {{ range site.RegularPages }}
-   
-  {{ end }}
+<main class="homepage">
+  <section class="hero">
+    <h1>ברוך הבא לאתר של עמיר אייל</h1>
+    <p>פסיכותרפיה למתבגרים, מבוגרים והורים</p>
+    <a class="cta-button" href="/contact/">לתיאום פגישה</a>
+  </section>
+</main>
 {{ end }}
