--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,9 +1,17 @@
 {{ define "main" }}
 <main class="homepage">
   <section class="hero">
-    <h1>ברוך הבא לאתר של עמיר אייל</h1>
+    <h1>עמיר אייל</h1>
     <p>פסיכותרפיה למתבגרים, מבוגרים והורים</p>
     <a class="cta-button" href="/contact/">לתיאום פגישה</a>
   </section>
+
+  {{ with .Content }}
+  <section class="home-content">
+    <div class="content main__content">
+      {{ . | safeHTML }}
+    </div>
+  </section>
+  {{ end }}
 </main>
 {{ end }}
